# hw1-5

./: 3_requirements.txt  app.py  check_db.py  pyproject.toml  q1.csv  q1_gender.csv  q2.csv  q2_region.csv  requirements.txt  unemployment.db
templates/: dashboard.html  gender_analysis.html  home.html  index.html  london_analysis.html  regional_analysis.html
